--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Yu Zhang
-description: Just do it!
+description: Huazhong University of Science and Technology (HUST)
