--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ theme: jekyll-theme-minimal
 title: Yu Zhang
 description: Huazhong University of Science and Technology (HUST)
 photo: myphoto.jpg
+imagelink: https://github.com/wangyangtao/wangyangtao.github.io/blob/master/wangyangtao.jpg
+blogName: Yu's Homepage
