--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Yu Zhang<img src="myphoto.jpg"  alt="photo" height="200" align="center"/>
-description: Huazhong University of Science and Technology (HUST)
+title: Yu Zhang
+description: <img src="myphoto.jpg"  alt="photo" height="200" align="center"/>
