--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: Yu Zhang
 description: <img src="myphoto.jpg"  alt="photo" height="200" align="center"/>
+logo: myphoto.jpg
