--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 theme: jekyll-theme-minimal
 title: Yu Zhang
-description: <img src="myphoto.jpg"  alt="photo" height="200" align="center"/>
+#description: <img src="myphoto.jpg"  alt="photo" height="200" align="center"/>
+description: Minimal is a theme for GitHub Pages.
+show_downloads: true
 logo: /myphoto.jpg
