--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: Yu Zhang
 #description: <img src="myphoto.jpg"  alt="photo" height="200" align="center"/>
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
+description: Huazhong University of Science and Technology.
+show_downloads: false
 logo: /myphoto.jpg
