--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ title: Yu Zhang
 #description: <img src="myphoto.jpg"  alt="photo" height="200" align="center"/>
 description: Huazhong University of Science and Technology.
 show_downloads: false
-logo: /myphoto.jpg
+logo: /myphoto1.jpg
