--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: Yu Zhang
 #description: <img src="myphoto.jpg"  alt="photo" height="200" align="center"/>
-description: Huazhong University of Science and Technology.
+description: If You Don't Fail, You're Not Even Trying.
 show_downloads: false
 logo: /zhangyu.jpg
