--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ title: Yu Zhang
 #description: <img src="myphoto.jpg"  alt="photo" height="200" align="center"/>
 description: If You Don't Fail, You're Not Even Trying.
 show_downloads: false
-logo: /zhangyu.jpg
+#logo: /zhangyu.jpg
 logo: /photo3
