--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ title: Yu Zhang
 description: If You Don't Fail, You're Not Even Trying.
 show_downloads: false
 #logo: /zhangyu.jpg
-logo: /photo3
+logo: /photo_1inch.jpg
