--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 title: Yu Zhang
 #description: <img src="myphoto.jpg"  alt="photo" height="200" align="center"/>
-description: If You Don't Fail, You're Not Even Trying.
+#description: If You Don't Fail, You're Not Even Trying.
 show_downloads: false
 #logo: /zhangyu.jpg
 logo: /photo_1inch.jpg
