--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ theme: jekyll-theme-minimal
 title: Yu Zhang
 #description: <img src="myphoto.jpg"  alt="photo" height="200" align="center"/>
 #description: If You Don't Fail, You're Not Even Trying.
+description: 
 show_downloads: false
 #logo: /zhangyu.jpg
 logo: /photo_1inch.jpg
