--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 theme: jekyll-theme-minimal
 title: Yu Zhang
-#description: <img src="myphoto.jpg"  alt="photo" height="200" align="center"/>
+#description: <img src="photo_1inch.jpg"  alt="photo" height="200" align="center"/>
 #description: If You Don't Fail, You're Not Even Trying.
-description: 
+#description: 
 show_downloads: false
 #logo: /zhangyu.jpg
-logo: /photo_1inch.jpg
+#logo: /photo_1inch.jpg
