--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: Yu Zhang
-#description: <img src="photo_1inch.jpg"  alt="photo" height="200" align="center"/>
+description: <img src="photo_1inch.jpg"  alt="photo" height="200" align="center"/>
 #description: If You Don't Fail, You're Not Even Trying.
 #description: 
 show_downloads: false
