--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: Yu Zhang (张煜)
-description: <img src="photo_1inch.jpg"  alt="photo" height="250" align="center"/>
+description: <img src="photo_1inch.jpg"  alt="photo" height="250" align="center"/><br><span id="busuanzi_container_site_pv">Visitor statistics: <span id="busuanzi_value_site_pv"></span> times</span>
 #description: If You Don't Fail, You're Not Even Trying.
 show_downloads: false
 #logo: /zhangyu.jpg
