--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 title: Yu Zhang (张煜)
-#description: <img src="photo_1inch.jpg"  alt="photo" height="250" align="center"/><br>
-description: <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script><span id="busuanzi_container_site_pv">Visitor statistics: <span id="busuanzi_value_site_pv"></span> times</span>
+description: <img src="photo_1inch.jpg"  alt="photo" height="250" align="center"/><
+#description: 
 show_downloads: false
 #logo: /zhangyu.jpg
-logo: /photo_1inch.jpg
+#logo: /photo_1inch.jpg
