--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 title: Yu Zhang (张煜)
 description: <img src="photo_1inch.jpg"  alt="photo" height="250" align="center"/>
 #description: 
